tests/ui/inference/need_type_info/issue-103053.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-103053.rs:15:5
   |
LL |     None;
   |     ^^^^ cannot infer type of the type parameter `T` declared on the enum `Option`
   |
help: consider specifying a concrete type for the type parameter `T`
   |
LL |     None::</* Type */>;
   |         ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
